# QuantatomAI

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  kind_output.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-and-test.yml  ci-atom-engine.yml  ci-frontend.yml  ci-grid-service.yml  docs-consistency.yml  repo-safety-snapshots.yml
compute/heliocalc/: Cargo.toml
docs/api/: grid-api.md  rest-endpoints.md
docs/architecture/: GeminiQuantAnalysis.md  ascii-diagram.md  atoms-lattice.md  data-tiering-hot-warm-cold.md  database-layer-mind-map.md  grid-operations-spec-sheet.md  ingestion-pipeline.md  layer_1_2_foundation_spec.md  layer_3_4_spine_spec.md  layer_5_compute_spec.md  layer_6_7_experience_spec.md  multi-cloud-federation.md  offline-ich.md  privacy-pev.md  quantatomai-architecture.md  quantatomai-grid-engine.md  quantatomai-master-schema.md  quantatomai-single-source-of-truth.md  quantatomai_ai_architecture.md  quantatomai_calculation_engine.md  quantatomai_competitive_analysis.md  quantatomai_data_structure_innovation.md  quantatomai_extreme_scale.md  (+7 more)
services/atom-engine/: Cargo.toml
services/atom-engine/src/: lib.rs
services/atom-engine/src/atom_script/: ast.rs  chunk.rs  compiler.rs  lexer.rs  mod.rs  parser.rs  solver.rs  tests.rs  vm.rs
services/atom-engine/src/compute/: graph.rs  mod.rs  simd.rs
services/atom-engine/src/ipc/: service.rs
services/atom-engine/src/lattice/: arena.rs  arena_stress.rs  attribution.rs  metadata.rs  mod.rs
services/atom-engine/src/mdf/: mod.rs  molecule.rs  reader.rs
(+232 files in other folders)
